# script-hub

./: .gitignore  .pre-commit-config.yaml  README.md
python/lc_platform/: G2022SelectOrgNum.xml  G2024ETFConfigMapper.xml  ddl_tablename.py  ddl_tablename_id.py  extract_all_table_names.py  get_tablename.py  load_mapping.py  load_mapping2.py  load_mapping3.py  main.py  pyproject.toml  sql_tables_and_sequences.xlsx  table_mapping.txt  table_names1.txt  table_namesid.txt  whatsapp.py
python/lc_platform/yuan/: OtcNewMallFifthQueryMapper.xml  OtcNewMallInvestMapper.xml  not_found_ddl.sql  oceanbase_ddl.sql  original_ddl.sql  table_list.txt  缺少的表.xlsx
python/rag/: bailian.py  game-review-analyzer.py  get-all-llm-types.py  main.py  pandas-demo.py  pyproject.toml  qwen_api_client.py  wukong1.csv  wukong2.csv  wukong_processed.csv  wukong_标签.csv
