[project]
name = "lc-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
]

# 配置国内镜像源（加速uv安装依赖）
[tool.uv.registry]
index = "https://pypi.tuna.tsinghua.edu.cn/simple"  # 清华PyPI镜像
# 备选：阿里云镜像
# index = "https://mirrors.aliyun.com/pypi/simple/"
