[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.24.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
]
